--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /136
-title: "React Hebdo #136: ..."
+title: "React Hebdo #136: Next.js, Signals, Bling, Suspense, Server Components, useSyncExternalStore, Expo, Reanimated, Metro..."
 authors: [slorber]
 date: 02-28-2023
 image: /img/TWIR_POST.png
@@ -9,7 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Cette semaine, le débat autour du modèle des signaux continue. On a aussi une belle release de Next.js qui dévoile un nouveau système de cache pour faciliter l'usage des Server Components sur un runtime Edge.
+
+Beaucoup d'activité également coté React-Native, avec Expo 48, Expo Router 1.0, Expo Image 1.0, Reanimated 3.0, et l'arrivée des symlinks dans Metro!
 
 <!-- truncate -->
 
@@ -223,16 +225,6 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/trashh_dev/status/1629883957121781760
-
-https://twitter.com/Steve8708/status/1629124957988085761
-
-https://twitter.com/trashh_dev/status/1628410081556701184
-
-https://twitter.com/brandontroberts/status/1628754855857737728
-
-https://twitter.com/levelsio/status/1628079930520272899
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/136/meme.jpg)](https://twitter.com/trashh_dev/status/1629883957121781760)
 
 A plus 👋
