--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/136/index.mdx
@@ -61,7 +61,7 @@ La plus grosse surprise pour moi, c'est l'introduction d'une API de cache direct
 
 **[The Evolution of Signals in JavaScript](https://dev.to/this-is-learning/the-evolution-of-signals-in-javascript-8ob)**
 
-Cet article de Ryan Carniato (SolidJS) qui retrace l'histoire des signaux dans le frontend, en passant par KnockoutJS, MobX et bien d'autres solutions.
+Cet article de Ryan Carniato (SolidJS) retrace l'histoire des signaux dans le frontend, en passant par KnockoutJS, MobX et bien d'autres solutions.
 
 C'est le gros sujet du moment, alors je vous propose de lire vous-même les nombreuses discussions qui ont eu lieu sur Twitter cette semaine:
 
@@ -85,7 +85,7 @@ C'est le gros sujet du moment, alors je vous propose de lire vous-même les nomb
 - 📜 [How to avoid tricky async state manager pitfalls in React](https://evilmartians.com/chronicles/how-to-avoid-tricky-async-state-manager-pitfalls-react)
 - 📜 [React Libraries for 2023](https://www.robinwieruch.de/react-libraries/)
 - 📜 [Storybook 7 Docs](https://storybook.js.org/blog/storybook-7-docs/)
-- 📦 [Suspense](https://github.com/bvaughn/suspense/): boite à outil pour React Suspense, nouveau projet de Brian Vaughn?
+- 📦 [Suspense](https://github.com/bvaughn/suspense/): boite à outil pour React Suspense, nouveau projet de Brian Vaughn.
 - 📦 [TanStack Bling](https://github.com/TanStack/bling/): nouveau projet framework-agnostic dans la TanStack sur lequel devrait s'appuyer le prochain meta-framework TanStack Start.
 - 📦 [Forgetti](https://github.com/lxsmnsyc/forgetti): un dev n'a pas envie d'attendre le compiler React Forget alors il travaille sur son propre compiler.
 - 📦 [TanStack Query v5.0.0-alpha.0](https://twitter.com/TkDodo/status/1630159547405877249): preview de nouveautés v5 a venir: améliorations sur infinite query, optimistic updates, bundle size...
