--- a/website/newsletter/136/index.mdx
+++ b/website/newsletter/136/index.mdx
@@ -9,9 +9,9 @@ unlisted: true
 
 Hi everyone!
 
-Cette semaine, le débat autour du modèle des signaux continue. On a aussi une belle release de Next.js qui dévoile un nouveau système de cache pour faciliter l'usage des Server Components sur un runtime Edge.
+This week, the debate around the signal model continues. We also have a nice release of Next.js, unveiling a new cache system to facilitate the performant usage of Server Components on a serverless Edge runtime.
 
-Beaucoup d'activité également coté React-Native, avec Expo 48, Expo Router 1.0, Expo Image 1.0, Reanimated 3.0, et l'arrivée des symlinks dans Metro!
+A lot of activity also on the React-Native side, with Expo 48, Expo Router 1.0, Expo Image 1.0, Reanimated 3.0, and the arrival of symlinks support in Metro!
 
 <!-- truncate -->
 
@@ -51,9 +51,9 @@ import Support from "../_support.mdx";
 
 **[Next.js 13.2](https://nextjs.org/blog/next-13-2)**
 
-Une belle release avec des nouveautés dont les devs Vercel nous avaient déjà donné un aperçu. La nouvelle API Metadata est utile pour le SEO, fonctionne bien avec le streaming SSR, les server components et le nouveau app directory. Les nouveaux Route Handlers ont l'air d'avoir une bonne ergonomie: il suffit d'exporter le verbe HTTP. Particulièrement excité par les nouveautés qui touchent au MDX (compiler Rust, Server Components), et qui devraient rendre les sites de contenus Next.js beaucoup plus léger à utiliser. Si j'ai bien compris, Next.js commence à utiliser une étape de codegen TypeScript pour les liens typés (en plus du plugin TypeScript). La compatibilité Turbopack avec Webpack loaders sera bien pratique pour faciliter la migration.
+A nice release with some new features that Vercel devs had already given us a preview of. The new Metadata API is useful for SEO, works well with SSR streaming, server components and the new app directory. The new Route Handlers seem to have a good usability: co-located, just export the HTTP verb. Particularly excited by the new features around MDX (Rust compiler, Server Components): that should make Next.js content sites much lighter and faster to use. If I understand correctly, Next.js starts using a TypeScript codegen step for typed links (in addition to the TypeScript plugin). Turbopack compatibility with Webpack loaders can make it easier to adopt the new bundler.
 
-La plus grosse surprise pour moi, c'est l'introduction d'une API de cache directement intégrée à `fetch()`: permet un peu la même chose que ISR mais avec une granularité plus fine, au niveau du composant, pour chaque requête. Il y a même un système de tagging. Next.js reste portable: le cache peut être hébergé sur votre propre infra, ou utiliser un simple LRU. L'intégration avec Vercel est facilitée. Un article dédié donne plus de détails et explique les limites du modèle ISR: [Vercel Cache API: A progressive cache, integrated with Next.js](https://vercel.com/blog/vercel-cache-api-nextjs-cache). Voir aussi le [thread de Sebastian Markbåge](https://twitter.com/sebmarkbage/status/1628845420121128965).
+The biggest surprise for me is the introduction of a cache API directly integrated to `fetch()`: allows a bit the same thing as ISR but with a finer granularity, at the component level, for each request. There is even a tagging system. Next.js remains portable: the cache can be hosted on your own infrastructure, or use a local LRU cache. Of course, this is optimized for deploying on Vercel. A dedicated article gives more details and explains the limits of the ISR model: [Vercel Cache API: A progressive cache, integrated with Next.js](https://vercel.com/blog/vercel-cache-api-nextjs-cache). See also the [thread of Sebastian Markbåge](https://twitter.com/sebmarkbage/status/1628845420121128965).
 
 ---
 
@@ -61,35 +61,36 @@ La plus grosse surprise pour moi, c'est l'introduction d'une API de cache direct
 
 **[The Evolution of Signals in JavaScript](https://dev.to/this-is-learning/the-evolution-of-signals-in-javascript-8ob)**
 
-Cet article de Ryan Carniato (SolidJS) qui retrace l'histoire des signaux dans le frontend, en passant par KnockoutJS, MobX et bien d'autres solutions.
+This article by Ryan Carniato (SolidJS) traces the history of signals in the frontend, through KnockoutJS, MobX and many other solutions.
 
-C'est le gros sujet du moment, alors je vous propose de lire vous-même les nombreuses discussions qui ont eu lieu sur Twitter cette semaine:
+Signals remained the trending topic of the week. I suggest you read for yourself the many discussions that took place on Twitter:
 
-- Andrew Clark [clarifie sa position](https://twitter.com/acdlite/status/1628811935088013314) et n'est [pas fermé à introduire les signaux dans React](https://twitter.com/acdlite/status/1626590880126889984). Le compiler React Forget [pourrait compiler vers des signaux](https://twitter.com/acdlite/status/1628930249718202369)
-- Miško Hevery [explique](https://twitter.com/mhevery/status/1628556944318550016) comment les signaux évitent les problèmes de perf sur le props drilling.
-- Evan You [préfère](https://twitter.com/youyuxi/status/1629636673519894528) un modèle muable compréhensible à un modèle immuable qui leak.
-- Devon Govett nous [rappelle](https://twitter.com/devongovett/status/1629540226589663233) pourquoi on a adopté le "unidirectional data flow" et met en avant quelques problèmes des signaux.
-- Jordan Walke [mentionne](https://twitter.com/jordwalke/status/1629663133039214593) qu'ils ont considéré utiliser un modèle réactif à la création de React. Rejeté, car cela changeait la sémantique du langage.
-- Dan Abramov [explique](https://twitter.com/dan_abramov/status/1629872956288512007) que l'utilisateur s'attend à voir la même interface pour les mêmes données. Il [explique](https://twitter.com/dan_abramov/status/1629539600489119744) l'intérêt d'utiliser des "raw values" (non enveloppées dans un conteneur).
-- [Ma position](https://twitter.com/sebastienlorber/status/1630264713845039104): je suis plutôt du même avis que l'équipe React et pense qu'il faut continuer d'innover sur le modèle actuel. J'espère qu'a terme JavaScript supporte mieux le modèle immuable, et que le compiler React Forget n'est qu'une étape de transition.
+- Andrew Clark [clarifies his position](https://twitter.com/acdlite/status/1628811935088013314) and is [not closed to introducing signals into React](https://twitter.com/acdlite/status/1626590880126889984). The React Forget compiler [could compile to signals](https://twitter.com/acdlite/status/1628930249718202369).
+- Miško Hevery [explains](https://twitter.com/mhevery/status/1628556944318550016) how signals avoid perf problems on the drilling props.
+- Evan You [prefers](https://twitter.com/youyuxi/status/1629636673519894528) an understandable mutable model to an immutable model that leaks.
+- Devon Govett [reminds us](https://twitter.com/devongovett/status/1629540226589663233) why "unidirectional data flow" was adopted and points out some problems with signals.
+- Jordan Walke [mentions](https://twitter.com/jordwalke/status/1629663133039214593) that they considered using a reactive model when React was created. Rejected because it changed the semantics of the language.
+- Dan Abramov [explains](https://twitter.com/dan_abramov/status/1629872956288512007) that the user expects to see the same interface for the same data. He [explains](https://twitter.com/dan_abramov/status/1629539600489119744) the value of using "raw values" (not wrapped in any container).
+- [My position](https://twitter.com/sebastienlorber/status/1630264713845039104): I largely share the same views as the React team and think we need to continue to innovate on the current model, despite Signals looking attractive in the short term. I hope that eventually JavaScript will support better the immutable model, and that the React Forget compiler is only a transitional step.
 
 ---
 
-- 👥 [Matt Carroll](https://twitter.com/mattcarrollcode) + [Sean Keegan](https://twitter.com/DevRelSean): 2 DevRels viennent de rejoindre l'équipe React.
-- 📜 [Module Extraction: The Silent Web Revolution](https://www.builder.io/blog/module-extraction-the-silent-web-revolution): les frameworks React peuvent déjà séparer le code client/server dans un même module. Certains autres frameworks comme Qwik vont plus loin et peuvent maintenant extraire des closures, y compris les variables capturées. A voir si cette idée scale bien sur de grosses apps.
-- 📜 [Why useEffect May Not Be the Best Abstraction](https://www.builder.io/blog/useeffect-not-the-best-abstraction): critique de useEffect et comparaison avec Qwik.
-- 📜 [i18n translations in Next.js 13's app-dir for server/client components](https://aralroca.com/blog/i18n-translations-nextjs-13-app-dir): l'auteur de Next-translate explique quelques difficultés rencontrées pour sortir la v2 de sa lib lié aux Server Components, mais rapporte quelques avantages intéressants comme la réduction du bundle js.
-- 📜 [React Is Holding Me Hostage](https://emnudge.dev/blog/react-hostage): une critique plutôt juste de React qui vante les mérites des signaux et d'un modèle plus réactif.
+- 👥 [Matt Carroll](https://twitter.com/mattcarrollcode) + [Sean Keegan](https://twitter.com/DevRelSean): 2 DevRels recently joined the React team.
+- 📜 [Module Extraction: The Silent Web Revolution](https://www.builder.io/blog/module-extraction-the-silent-web-revolution): React frameworks can already separate client/server code in the same module. But frameworks like Qwik go further and can even extract closures (including captured variables). Let's see if this idea scales well on big apps.
+- 📜 [Why useEffect May Not Be the Best Abstraction](https://www.builder.io/blog/useeffect-not-the-best-abstraction): criticism of useEffect and comparison with Qwik code.
+- 📜 [i18n translations in Next.js 13's app-dir for server/client components](https://aralroca.com/blog/i18n-translations-nextjs-13-app-dir):
+  the author of Next-translate explains some difficulties encountered to release the v2 of his lib related to Server Components, but reports some interesting advantages like the reduction of the js bundle size.
+- 📜 [React Is Holding Me Hostage](https://emnudge.dev/blog/react-hostage): a rather fair criticism of React that praises the merits of signals and a more reactive model.
 - 📜 [useSyncExternalStore - First Look](https://julesblom.com/writing/usesyncexternalstore): ce hook est plus utile qu'il n'en a l'air, ne passez pas a coté!
-- 📜 [Owncast v0.1.0 Retrospective - Frontend Web Rewrite](https://gabekangas.com/blog/2023/02/owncast-v0.1.0-retrospective-frontend-web-rewrite/): retour d'expérience sur le passage de Preact vers React/Next.js. Aspect "social" intéressant lié au passage de Preact à React.
+- 📜 [Owncast v0.1.0 Retrospective - Frontend Web Rewrite](https://gabekangas.com/blog/2023/02/owncast-v0.1.0-retrospective-frontend-web-rewrite/): feedback on the switch from Preact to React/Next.js, including an interesting social outcome (more contributors).
 - 📜 [How to avoid tricky async state manager pitfalls in React](https://evilmartians.com/chronicles/how-to-avoid-tricky-async-state-manager-pitfalls-react)
 - 📜 [React Libraries for 2023](https://www.robinwieruch.de/react-libraries/)
 - 📜 [Storybook 7 Docs](https://storybook.js.org/blog/storybook-7-docs/)
-- 📦 [Suspense](https://github.com/bvaughn/suspense/): boite à outil pour React Suspense, nouveau projet de Brian Vaughn?
-- 📦 [TanStack Bling](https://github.com/TanStack/bling/): nouveau projet framework-agnostic dans la TanStack sur lequel devrait s'appuyer le prochain meta-framework TanStack Start.
-- 📦 [Forgetti](https://github.com/lxsmnsyc/forgetti): un dev n'a pas envie d'attendre le compiler React Forget alors il travaille sur son propre compiler.
-- 📦 [TanStack Query v5.0.0-alpha.0](https://twitter.com/TkDodo/status/1630159547405877249): preview de nouveautés v5 a venir: améliorations sur infinite query, optimistic updates, bundle size...
-- 📦 [Tinasaurus - Edit your Docusaurus site with TinaCMS](https://tina.io/blog/tinasaurus-docusaurus-starter/): CMS qui s'intègre bien avec Docusaurus et permet l'usage de composants MDX.
+- 📦 [Suspense](https://github.com/bvaughn/suspense/): toolbox for React Suspense, Brian Vaughn's new project.
+- 📦 [TanStack Bling](https://github.com/TanStack/bling/): new framework-agnostic project of the TanStack on which the next TanStack Start meta-framework should be based.
+- 📦 [Forgetti](https://github.com/lxsmnsyc/forgetti): a dev doesn't want to wait for the React Forget compiler so he works on his own compiler.
+- 📦 [TanStack Query v5.0.0-alpha.0](https://twitter.com/TkDodo/status/1630159547405877249): preview of upcoming v5 improvements: infinite query, optimistic updates, bundle size...
+- 📦 [Tinasaurus - Edit your Docusaurus site with TinaCMS](https://tina.io/blog/tinasaurus-docusaurus-starter/): CMS that integrates well with Docusaurus and allows the use of MDX components.
 - 📦 [Sonner - an opinionated toast component for React](https://twitter.com/emilkowalski_/status/1628742238548250624)
 - 📦 [nodl - framework for visual node graphs](https://twitter.com/emilwidlund/status/1628877076424949760)
 - 📦 [React Aria - February 2023 releases](https://twitter.com/devongovett/status/1629156091178131457)
@@ -127,18 +128,18 @@ You build it; you own it! It's a simple mantra that has driven software developm
 
 **[Expo 48](https://blog.expo.dev/expo-sdk-48-ccb8302e231)**
 
-Belle release. On retrouve les highlights de la beta:
+Nice release. We find back the highlights of the beta:
 
 - React Native 0.71.3 - React 18.2.0
-- Améliorations Yoga (Flexbox) qui viennent avec React-Native
-- EAS builders sous M1 par défaut
-- Moteur Hermes par défaut
-- Tous les modules Expo supportent Fabric - expérimental
+- Yoga improvements (Flexbox) that come with React-Native
+- EAS builders under M1 by default
+- Hermes engine by default
+- All Expo modules support Fabric - experimental
 
-Petites nouveautés depuis la beta:
+Some updates since the beta:
 
-- Expo Image 1.0 en version stable
-- Expo Router 1.0 en version stable ([blog post dédié](https://blog.expo.dev/announcing-expo-router-v1-1d97d7833605))
+- Expo Image 1.0 now stable
+- Expo Router 1.0 now stable ([dedicated blog post](https://blog.expo.dev/announcing-expo-router-v1-1d97d7833605))
 
 ---
 
@@ -146,18 +147,18 @@ Petites nouveautés depuis la beta:
 
 **[Reanimated 3.0](https://blog.swmansion.com/releasing-reanimated-3-0-17fab4cb2394)**
 
-La v3.0 de Reanimated vient de sortir en version stable, avec une nouvelle feature de Shared Elements Transitions ([demo](https://twitter.com/swmansion/status/1630590156255240193)). Il est maintenant possible d'utiliser des shared values en inline styles. La librairie a été réécrite pour améliorer les performances, la DX et préparer l'arrivée de nouvelles features. La v3 est compatible avec Fabric et l'API Reanimated 2 pour faciliter la mise à jour, mais l'API Reanimated 1 est retirée.
+Reanimated 3.0 has just been released in a stable version, with a new Shared Elements Transitions feature ([demo](https://twitter.com/swmansion/status/1630590156255240193)). It is now possible to use shared values in inline styles. The library has been rewritten to improve performance, DX and prepare for the arrival of new features. It is compatible with Fabric and the Reanimated 2 API to facilitate the upgrade, but the Reanimated 1 API has been removed.
 
 ---
 
 - 📜 [React Native App Clip: New Capabilities and Reduced App Size](https://bndkt.com/blog/2023/react-native-app-clip-new-capabilities)
-- 💬 [RFC: introduce reactNativeMetadata to package.json](https://github.com/react-native-community/discussions-and-proposals/pull/588): propose d'ajouter des meta-données dans package.json pour diverses raisons (apps + libraries).
-- 💬 [RFC: Lazy bundling](https://github.com/react-native-community/discussions-and-proposals/pull/605): pour démarrer son app plus vite en dev grâce aux dynamic imports.
-- 📦 [Metro 0.75.1](https://twitter.com/robjhogan/status/1628460899714449416): support expérimental des symlinks et package "exports"!
-- 📦 [Restyle 2.4](https://github.com/Shopify/restyle/pull/220): nombreuses améliorations de performance sur la librairie de styling de Shopify
-- 📦 [Dank Style (alpha)](https://dank.style/): nouvelle librairie de styling universelle pour Next.js et React-Native.
-- 👀 [Expo + React-Native Server Components demo](https://twitter.com/Baconbrix/status/1629909713910480898): ça fait un moment que je vous bassine avec ça, et Evan Bacon vient de sortir une première démo qui montre que c'est possible!
-- 👀 [BottomSheet - web support](https://twitter.com/gorhom/status/1627399052068282368): PR mergée, ça arrive dans la v5
+- 💬 [RFC: introduce reactNativeMetadata to package.json](https://github.com/react-native-community/discussions-and-proposals/pull/588): proposes to add metadata in `package.json` for various reasons (apps + libraries).
+- 💬 [RFC: Lazy bundling](https://github.com/react-native-community/discussions-and-proposals/pull/605): to start your big app faster in dev thanks to dynamic imports.
+- 📦 [Metro 0.75.1](https://twitter.com/robjhogan/status/1628460899714449416): experimental support for symlinks and `package.json` "exports"!
+- 📦 [Restyle 2.4](https://github.com/Shopify/restyle/pull/220): numerous performance improvements on the Shopify styling library.
+- 📦 [Dank Style (alpha)](https://dank.style/): new universal styling library for Next.js and React-Native.
+- 👀 [Expo + React-Native Server Components demo](https://twitter.com/Baconbrix/status/1629909713910480898): I've been talking about this for a while, and Evan Bacon has just released a first demo that shows it's possible!
+- 👀 [BottomSheet - web support](https://twitter.com/gorhom/status/1627399052068282368): PR merged, coming in v5.
 - ⚠️ [Fastlane - Update immediately to avoid locked Apple ID account](https://twitter.com/FastlaneTools/status/1629153901747265538)
 - 🎙️ [The React Native Show, Coffee Talk #8 - State of React Native](https://www.youtube.com/watch?v=jwfsMzLY5Cs)
 - 🎥 [A Beginner's Guide to 3D Animations in React Native with three.js](https://www.youtube.com/watch?v=5WNoynmnEAs)
@@ -185,7 +186,7 @@ We have several roles open for developers focused on React Native! Pay is ~160k 
 
 ## 🔀 Other {#other}
 
-- [Babel 7.21](https://babeljs.io/blog/2023/02/20/7.21.0): support TypeScript 5.0 et decorators
+- [Babel 7.21](https://babeljs.io/blog/2023/02/20/7.21.0): support TypeScript 5.0 + decorators
 - [Angular v16.0.0-next.0](https://twitter.com/Enea_Jahollari/status/1628515124347654144): signals
 - [Deno 1.31](https://twitter.com/deno_land/status/1629123230492463106)
 - [Vitest 0.29](https://twitter.com/sheremet_va/status/1629403679898972161)
