--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/135/index.mdx
@@ -119,9 +119,9 @@ Vous savez sans doute déjà qu'un documentaire sur React est sorti 😉! Je met
 
 ## 💸 Sponsor {#sponsor2}
 
-[![surveyjs.jpg](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/)
+[![surveyjs.jpg](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)
 
-**[Librairie JavaScript extensibles pour les sondages et les formulaires](https://surveyjs.io/)**
+**[Librairie JavaScript extensibles pour les sondages et les formulaires](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)**
 
 [SurveyJS](https://github.com/surveyjs) est un ensemble de librairies de formulaires JavaScript open-source que vous pouvez facilement intégrer à votre application Web. Cela vous permet de **créer et d'exécuter plusieurs formulaires**, en conservant toutes les données sensibles sur vos serveurs, ou d'avoir **votre propre form builder WYSIWYG hébergé** que les utilisateurs non techniques peuvent utiliser facilement.
 
