--- a/website/newsletter/135/index.mdx
+++ b/website/newsletter/135/index.mdx
@@ -117,9 +117,9 @@ You probably already know that a documentary about React is out 😉 ! I'm putti
 
 ## 💸 Sponsor {#sponsor2}
 
-[![surveyjs.jpg](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/)
+[![surveyjs.jpg](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)
 
-**[Extensible JavaScript libraries for surveys and forms](https://surveyjs.io/)**
+**[Extensible JavaScript libraries for surveys and forms](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)**
 
 [SurveyJS](https://github.com/surveyjs) is a set of open-source JavaScript form libraries that you can easily integrate into your web app. It lets you **create and run multiple forms**, retaining all sensitive data on your servers, or have **your own self-hosted WYSIWYG form builder** that non-tech users can use directly.
 
