--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/133/index.mdx
@@ -96,9 +96,9 @@ Cet article met en avant l'intégration possible entre Qwik et React. Qwik est u
 
 ## 💸 Sponsor {#sponsor2}
 
-[![surveyjs.jpg](/emails/issues/133/surveyjs.jpg)](https://surveyjs.io/)
+[![surveyjs.jpg](/emails/issues/133/surveyjs.jpg)](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)
 
-**[Librairie JavaScript extensibles pour les sondages et les formulaires](https://surveyjs.io/)**
+**[Librairie JavaScript extensibles pour les sondages et les formulaires](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)**
 
 [SurveyJS](https://github.com/surveyjs) est un ensemble de librairies de formulaires JavaScript open-source que vous pouvez facilement intégrer à votre application Web. Cela vous permet de **créer et d'exécuter plusieurs formulaires**, en conservant toutes les données sensibles sur vos serveurs, ou d'avoir **votre propre form builder WYSIWYG hébergé** que les utilisateurs non techniques peuvent utiliser facilement.
 
