--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -41,7 +41,6 @@ import Support from "../_support.mdx";
 
 **[Visiter Suncel.io](https://suncel.io/)** | **[5mn vidéo démo](https://www.youtube.com/watch?v=LUupLEZKp3w)**
 
-
 ---
 
 ## ⚛️ React {#react}
@@ -54,14 +53,13 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-[![Surveyjs - Librairie JavaScript extensibles pour les sondages et les formulaires](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/)
+[![Surveyjs - Librairie JavaScript extensibles pour les sondages et les formulaires](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)
 
-**[Librairie JavaScript extensibles pour les sondages et les formulaires](https://surveyjs.io/)**
+**[Librairie JavaScript extensibles pour les sondages et les formulaires](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)**
 
 [SurveyJS](https://github.com/surveyjs) est un ensemble de librairies de formulaires JavaScript open-source que vous pouvez facilement intégrer à votre application Web. Cela vous permet de **créer et d'exécuter plusieurs formulaires**, en conservant toutes les données sensibles sur vos serveurs, ou d'avoir **votre propre form builder WYSIWYG hébergé** que les utilisateurs non techniques peuvent utiliser facilement.
 
 Vous pouvez également **analyser les résultats des sondages** dans des tableaux de bord personnalisés, enregistrer vos formulaires au format PDF ou simplement **les convertir en fichiers PDF modifiables**. Il offre un support natif pour **React et Angular**, et la possibilité de choisir le backend de son choix: **toute combinaison serveur + base de données est possible**.
-
 
 ---
 
