--- a/website/newsletter/137/index.mdx
+++ b/website/newsletter/137/index.mdx
@@ -57,9 +57,9 @@ Suncel CMS as developer :
 
 ## 💸 Sponsor {#sponsor2}
 
-[![Surveyjs - Extensible JavaScript libraries for surveys and forms](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/)
+[![Surveyjs - Extensible JavaScript libraries for surveys and forms](/emails/issues/136/surveyjs.jpg)](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)
 
-**[Extensible JavaScript libraries for surveys and forms](https://surveyjs.io/)**
+**[Extensible JavaScript libraries for surveys and forms](https://surveyjs.io/?utm_source=thisweekinreact&utm_medium=referral)**
 
 [SurveyJS](https://github.com/surveyjs) is a set of open-source JavaScript form libraries that you can easily integrate into your web app. It lets you **create and run multiple forms**, retaining all sensitive data on your servers, or have **your own self-hosted WYSIWYG form builder** that non-tech users can use directly.
 
