--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -44,7 +44,7 @@ Last updated: **March 2023**.
     Cloudflare, ByteDance, Figma, Uber...
   </li>
   <li>
-    <b>Popular offer</b>:{" "}
+    <b>Most popular offer</b>:{" "}
     <a href="#sponsor-1st">
       1st sponsor - 4 issues - sent to all subscribers
     </a>
@@ -244,7 +244,6 @@ We can offer premium sponsorship opportunities:
 
 To order a sponsorship slot, follow these steps:
 
-- Select your [target audience](#audience): one of All / 🇬🇧 / 🇫🇷
 - Select your [placement](#placement) and number of issues
 - Select available dates on the [public sponsorship calendar](https://thisweekinreact.com/calendar)
 - Prepare your company details for invoicing
@@ -261,7 +260,6 @@ Hi
 We would like to sponsor This Week In React.
 
 Booking informations:
-- Target audience: all
 - Sponsorship placement: 1st sponsor
 - Number of issues: 4
 - Price: 1000€
@@ -299,7 +297,7 @@ You don't have to book consecutive ad slots. Spreading your ads over time can gi
 
 Once the order is complete:
 
-- You pay the invoice under 30 days
+- You pay the invoice under 30 days before the publication date
 - You provide the ad copy
 - We review and validate the ad copy
 - We send the ad in the newsletters 🎉
@@ -309,7 +307,7 @@ Once the order is complete:
 You can book a sponsorship offer without providing the ad copy immediately. We kindly ask you to:
 
 - provide an estimated date to send the ad copy: we will schedule a recall
-- provide the final ad copy at least one week before the publication
+- provide the final ad copy at least **one week before the first publication date**
 
 :::
 
@@ -352,9 +350,9 @@ We will tell you if we think your ad is not a good fit.
 
 These companies previously sponsored the newsletter:
 
-- **Products**: Retool, Stream, Storyblok, Axiom, Meteor, Hashnode, React-Bricks, RemixTape, Storetasker, Cambly, Indy, TechTree...
-- **Conferences**: App.js, React Brussels, BeJS...
-- **Job offers**: Cajoo, Front, Cycle, Showtime, Luko, Matters, Maki, Nabla, Pelico, Shotgun, Pricemoov, Germinal, WeCasa, iFeelSmart, BAM, My Little Team...
+- **Products**: Stream, Storyblok, Retool, Sizzy, React-Bricks, Refine, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, Axiom, Meteor, Hashnode, Sunsama, RemixTape, Storetasker, Cambly, Indy, TechTree...
+- **Conferences**: App.js, React Brussels, Chain React, BeJS...
+- **Job offers**: Causal, Passionfroot, Cajoo, Front, Cycle, Showtime, Luko, Matters, Maki, Nabla, Pelico, Masteos, Shotgun, Pricemoov, Germinal, WeCasa, iFeelSmart, BAM, Premier Octet, My Little Team...
 
 ## FAQ
 
