--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -9,6 +9,8 @@ unlisted: true
 
 Salut à tous !
 
+Promo NextReact: https://codelynx.dev/nextreact
+
 <Todo />
 
 <!-- truncate -->
@@ -45,7 +47,54 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Common Beginner Mistakes with React](https://www.joshwcomeau.com/react/common-beginner-mistakes/)
+
+---
+
+[Making the Case for Signals in JavaScript](https://dev.to/this-is-learning/making-the-case-for-signals-in-javascript-4c7i
+
+https://twitter.com/RyanCarniato/status/1631733420148793344
+
+---
+
+Bling: https://twitter.com/tannerlinsley/status/1631003945522065409
+
+- [WTF Is Code Extraction](https://www.builder.io/blog/wtf-is-code-extraction) + https://twitter.com/tannerlinsley/status/1630994907405115393
+
+---
+
+[Deno - You Don't Need a Build Step](https://deno.com/blog/you-dont-need-a-build-step)
+
+https://twitter.com/deno_land/status/1630991025517854734
+
+---
+
+[React Server Components with Dan Abramov, Joe Savona, and Kent C. Dodds](https://www.youtube.com/watch?v=h7tur48JSaw)
+
+Josh comeau: https://twitter.com/JoshWComeau/status/1631398854632304641
+
+---
+
+- [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
+
+- [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
+- [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/)
+- [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement and Hot Data Revalidation
+- [React vs Signals: 10 Years Later](https://dev.to/this-is-learning/react-vs-signals-10-years-later-3k71) + https://twitter.com/dan_abramov/status/1631061136727482377
+- [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/) + https://twitter.com/asidorenko_/status/1631238830123565056
+- [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling) + https://twitter.com/mhevery/status/1631350529682014208
+- [Introducing Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia) + https://twitter.com/tldraw/status/1631354471275016192
+
+- [Dan Abramov - "ask me anything about React Server Components"](https://twitter.com/dan_abramov/status/1631641431742857216) + ["i need to start collecting ways to pitch react server components"](https://twitter.com/dan_abramov/status/1631885118355718144)
+- ["Thinking in React" visualized](https://twitter.com/asidorenko_/status/1631967645376315400)
+- [How to put Server Components inside Client Components](https://twitter.com/dai_shi/status/1631989295866347520)
+- [`ui = client(server(data), state)`](https://twitter.com/dan_abramov/status/1632535654142713862)
+- [preact-reconciliers](https://github.com/CodyJasonBennett/preact-reconciler) + https://twitter.com/Cody_J_Bennett/status/1632674026408558592 + https://twitter.com/Cody_J_Bennett/status/1633063536158023680
+- [Remix + Fastly support](https://twitter.com/FastlyDevs/status/1631031583523192832): nouveau server adapter pour Remix
+- [React Is A Backend Framework Now](https://www.youtube.com/watch?v=EhI6wb5nEEs)
+- [Rebuilding Jotai State Manager for React in 20 Minutes!](https://www.youtube.com/watch?v=gg31JTZmFUw)
+- [Mantine 6.0](https://mantine.dev/changelog/6-0-0/)
+- [Sentry’s Frontend Tests: Migrating from Enzyme to React Testing Library](https://blog.sentry.io/2023/02/23/sentrys-frontend-tests-migrating-from-enzyme-to-react-testing-library/)
 
 <SubscribeFormEmbed />
 
@@ -65,9 +114,18 @@ Vous pouvez également **analyser les résultats des sondages** dans des tableau
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[I made JSON.parse() 2x faster](https://radex.io/react-native/json-parse/)
+
+https://twitter.com/radexp/status/1631999486456213504
 
 ---
+
+- [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/mrousavy/react-native-vision-camera/discussions/1505) + https://twitter.com/mrousavy/status/1631269105796886528
+- [React Native will soon be a Monorepo](https://twitter.com/o_kwasniewski/status/1631292628217266176)
+- [Code elimination for React Native apps demo](https://twitter.com/Baconbrix/status/1631749459389431808)
+- [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193)
+- [RNR 261 - What’s the deal with EAS?](https://reactnativeradio.com/episodes/rnr-261-whats-the-deal-with-eas)
+- [Riveo Page Curl - “Can it be done in React Native?”](https://www.youtube.com/watch?v=xNZCQvtnhIU)
 
 ## 🧑‍💻 Jobs {#jobs}
 
@@ -95,9 +153,10 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Les types en React TypeScript : la clé pour un code plus robuste](https://www.youtube.com/watch?v=pTw4Fr4vLrY)
+- [Le guide complet de SSR et CSR pour débutants](https://www.youtube.com/watch?v=KHRwgK2dnFc)
 
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
+  💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
 <Todo />
 
@@ -105,13 +164,34 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [TypeScript 5.0 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-5-0-rc/)
+- [Zod 3.21](https://twitter.com/colinhacks/status/1632472849960280064)
+- [JavaScript Import maps, Part 2: In-Depth Exploration](https://spidermonkey.dev/blog/2023/03/02/javascript-import-maps-part-2-in-depth-exploration.html)
+- [Tether elements to each other with CSS anchor positioning](https://developer.chrome.com/blog/tether-elements-to-each-other-with-css-anchor-positioning/)
+- [Can WebAssembly Solve Serverless’s Problems?](https://thenewstack.io/can-webassembly-solve-serverless-problems/)
+- [Experiments with the JavaScript Garbage Collector](https://dev.to/codux/experiments-with-the-javascript-garbage-collector-2ae3)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/trashh_dev/status/1632034009642602498
+
+https://twitter.com/peterpme/status/1631689866944692225
+
+https://twitter.com/FredKSchott/status/1631449132358598656
+
+https://twitter.com/potetotes/status/1631401117186764803
+
+https://twitter.com/housecor/status/1631296202409902086
+
+https://twitter.com/jarredsumner/status/1631176004655013891
+
+https://twitter.com/jamonholmgren/status/1631002581471465474
+
+https://twitter.com/trashh_dev/status/1631011515892654080
+
+https://twitter.com/mlrawlings/status/1630948865711960066
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
 
