--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -51,7 +51,7 @@ import Support from "../_support.mdx";
 
 ---
 
-[Making the Case for Signals in JavaScript](https://dev.to/this-is-learning/making-the-case-for-signals-in-javascript-4c7i
+[Making the Case for Signals in JavaScript](https://dev.to/this-is-learning/making-the-case-for-signals-in-javascript-4c7i)
 
 https://twitter.com/RyanCarniato/status/1631733420148793344
 
@@ -75,26 +75,23 @@ Josh comeau: https://twitter.com/JoshWComeau/status/1631398854632304641
 
 ---
 
-- [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
-
-- [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
-- [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/)
-- [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement and Hot Data Revalidation
-- [React vs Signals: 10 Years Later](https://dev.to/this-is-learning/react-vs-signals-10-years-later-3k71) + https://twitter.com/dan_abramov/status/1631061136727482377
-- [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/) + https://twitter.com/asidorenko_/status/1631238830123565056
-- [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling) + https://twitter.com/mhevery/status/1631350529682014208
-- [Introducing Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia) + https://twitter.com/tldraw/status/1631354471275016192
-
-- [Dan Abramov - "ask me anything about React Server Components"](https://twitter.com/dan_abramov/status/1631641431742857216) + ["i need to start collecting ways to pitch react server components"](https://twitter.com/dan_abramov/status/1631885118355718144)
-- ["Thinking in React" visualized](https://twitter.com/asidorenko_/status/1631967645376315400)
-- [How to put Server Components inside Client Components](https://twitter.com/dai_shi/status/1631989295866347520)
-- [`ui = client(server(data), state)`](https://twitter.com/dan_abramov/status/1632535654142713862)
-- [preact-reconciliers](https://github.com/CodyJasonBennett/preact-reconciler) + https://twitter.com/Cody_J_Bennett/status/1632674026408558592 + https://twitter.com/Cody_J_Bennett/status/1633063536158023680
-- [Remix + Fastly support](https://twitter.com/FastlyDevs/status/1631031583523192832): nouveau server adapter pour Remix
-- [React Is A Backend Framework Now](https://www.youtube.com/watch?v=EhI6wb5nEEs)
-- [Rebuilding Jotai State Manager for React in 20 Minutes!](https://www.youtube.com/watch?v=gg31JTZmFUw)
-- [Mantine 6.0](https://mantine.dev/changelog/6-0-0/)
-- [Sentry’s Frontend Tests: Migrating from Enzyme to React Testing Library](https://blog.sentry.io/2023/02/23/sentrys-frontend-tests-migrating-from-enzyme-to-react-testing-library/)
+- 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
+- 📜 [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
+- 📜 [Sentry’s Frontend Tests: Migrating from Enzyme to React Testing Library](https://blog.sentry.io/2023/02/23/sentrys-frontend-tests-migrating-from-enzyme-to-react-testing-library/)
+- 📜 [React vs Signals: 10 Years Later](https://dev.to/this-is-learning/react-vs-signals-10-years-later-3k71) + https://twitter.com/dan_abramov/status/1631061136727482377
+- 📜 [Prop drilling and component composition in React](https://alexsidorenko.com/blog/react-prop-drilling-composition/) + https://twitter.com/asidorenko_/status/1631238830123565056
+- 📜 [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling) + https://twitter.com/mhevery/status/1631350529682014208
+- 📦 [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement and Hot Data Revalidation
+- 📦 [Introducing Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia) + https://twitter.com/tldraw/status/1631354471275016192
+- 🧵 [Dan Abramov - "ask me anything about React Server Components"](https://twitter.com/dan_abramov/status/1631641431742857216) + ["i need to start collecting ways to pitch react server components"](https://twitter.com/dan_abramov/status/1631885118355718144)
+- 🎨 ["Thinking in React" visualized](https://twitter.com/asidorenko_/status/1631967645376315400)
+- 🐦 [How to put Server Components inside Client Components](https://twitter.com/dai_shi/status/1631989295866347520)
+- 🧵 [`ui = client(server(data), state)`](https://twitter.com/dan_abramov/status/1632535654142713862)
+- 📦 [preact-reconciliers](https://github.com/CodyJasonBennett/preact-reconciler) + https://twitter.com/Cody_J_Bennett/status/1632674026408558592 + https://twitter.com/Cody_J_Bennett/status/1633063536158023680
+- 📦 [Remix + Fastly support](https://twitter.com/FastlyDevs/status/1631031583523192832): nouveau server adapter pour Remix
+- 🎥 [React Is A Backend Framework Now](https://www.youtube.com/watch?v=EhI6wb5nEEs)
+- 🎥 [Rebuilding Jotai State Manager for React in 20 Minutes!](https://www.youtube.com/watch?v=gg31JTZmFUw)
+- 📦 [Mantine 6.0](https://mantine.dev/changelog/6-0-0/)
 
 <SubscribeFormEmbed />
 
@@ -120,12 +117,13 @@ https://twitter.com/radexp/status/1631999486456213504
 
 ---
 
-- [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/mrousavy/react-native-vision-camera/discussions/1505) + https://twitter.com/mrousavy/status/1631269105796886528
-- [React Native will soon be a Monorepo](https://twitter.com/o_kwasniewski/status/1631292628217266176)
-- [Code elimination for React Native apps demo](https://twitter.com/Baconbrix/status/1631749459389431808)
-- [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193)
-- [RNR 261 - What’s the deal with EAS?](https://reactnativeradio.com/episodes/rnr-261-whats-the-deal-with-eas)
-- [Riveo Page Curl - “Can it be done in React Native?”](https://www.youtube.com/watch?v=xNZCQvtnhIU)
+- 👀 [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/mrousavy/react-native-vision-camera/discussions/1505) + https://twitter.com/mrousavy/status/1631269105796886528
+- 👀 [React Native will soon be a Monorepo](https://twitter.com/o_kwasniewski/status/1631292628217266176)
+- 👀 [Code elimination for React Native apps demo](https://twitter.com/Baconbrix/status/1631749459389431808)
+- 🔗 [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193)
+- 🎙️ [RNR 261 - What’s the deal with EAS?](https://reactnativeradio.com/episodes/rnr-261-whats-the-deal-with-eas)
+- 🎥 [Riveo Page Curl - “Can it be done in React Native?”](https://www.youtube.com/watch?v=xNZCQvtnhIU)
+- 📦 [React-Native-Replicache](https://github.com/Braden1996/react-native-replicache/)
 
 ## 🧑‍💻 Jobs {#jobs}
 
