--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/137/index.mdx
@@ -73,8 +73,13 @@ https://twitter.com/deno_land/status/1630991025517854734
 
 Josh comeau: https://twitter.com/JoshWComeau/status/1631398854632304641
 
+https://twitter.com/acdlite/status/1631324263138443268
+
 ---
 
+- 🧵 [Dan Abramov - "ask me anything about React Server Components"](https://twitter.com/dan_abramov/status/1631641431742857216) + ["i need to start collecting ways to pitch react server components"](https://twitter.com/dan_abramov/status/1631885118355718144)
+- 🧵 [Andrew Clark on framework-agnostic vs well-integrated tools](https://twitter.com/acdlite/status/1632910367289491459)
+- 📜 [Were React Hooks a Mistake?](https://jakelazaroff.com/words/were-react-hooks-a-mistake/)
 - 📜 [Wishlist for a React Compiler](https://electricui.com/blog/wishlist-for-a-react-compiler) + https://twitter.com/KillcoDer/status/1633100312411004928
 - 📜 [Functions Are Killing Your React App's Performance](https://unicorn-utterances.com/posts/functions-are-killing-react-performance)
 - 📜 [Sentry’s Frontend Tests: Migrating from Enzyme to React Testing Library](https://blog.sentry.io/2023/02/23/sentrys-frontend-tests-migrating-from-enzyme-to-react-testing-library/)
@@ -83,7 +88,6 @@ Josh comeau: https://twitter.com/JoshWComeau/status/1631398854632304641
 - 📜 [React’s Upcoming Compiler Only Solves Part Of The Problem](https://www.builder.io/blog/react-compiler-will-not-solve-prop-drilling) + https://twitter.com/mhevery/status/1631350529682014208
 - 📦 [Remix 1.14](https://twitter.com/kentcdodds/status/1631059357654818819): Hot Module Replacement and Hot Data Revalidation
 - 📦 [Introducing Signia - Scalable signals for TypeScript](https://tldraw.substack.com/p/introducing-signia) + https://twitter.com/tldraw/status/1631354471275016192
-- 🧵 [Dan Abramov - "ask me anything about React Server Components"](https://twitter.com/dan_abramov/status/1631641431742857216) + ["i need to start collecting ways to pitch react server components"](https://twitter.com/dan_abramov/status/1631885118355718144)
 - 🎨 ["Thinking in React" visualized](https://twitter.com/asidorenko_/status/1631967645376315400)
 - 🐦 [How to put Server Components inside Client Components](https://twitter.com/dai_shi/status/1631989295866347520)
 - 🧵 [`ui = client(server(data), state)`](https://twitter.com/dan_abramov/status/1632535654142713862)
@@ -92,6 +96,7 @@ Josh comeau: https://twitter.com/JoshWComeau/status/1631398854632304641
 - 🎥 [React Is A Backend Framework Now](https://www.youtube.com/watch?v=EhI6wb5nEEs)
 - 🎥 [Rebuilding Jotai State Manager for React in 20 Minutes!](https://www.youtube.com/watch?v=gg31JTZmFUw)
 - 📦 [Mantine 6.0](https://mantine.dev/changelog/6-0-0/)
+- 📦 [storybook-docusaurus](https://github.com/jodyheavener/storybook-docusaurus)
 
 <SubscribeFormEmbed />
 
@@ -117,13 +122,15 @@ https://twitter.com/radexp/status/1631999486456213504
 
 ---
 
-- 👀 [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/mrousavy/react-native-vision-camera/discussions/1505) + https://twitter.com/mrousavy/status/1631269105796886528
 - 👀 [React Native will soon be a Monorepo](https://twitter.com/o_kwasniewski/status/1631292628217266176)
 - 👀 [Code elimination for React Native apps demo](https://twitter.com/Baconbrix/status/1631749459389431808)
+- 📜 [Top Ten Reasons to go to Chain React](https://shift.infinite.red/top-ten-reasons-to-go-to-chain-react-665a93883e4f)
 - 🔗 [React Native Hitchhiker's Guide](https://twitter.com/ospfranco/status/1631984862474248193)
 - 🎙️ [RNR 261 - What’s the deal with EAS?](https://reactnativeradio.com/episodes/rnr-261-whats-the-deal-with-eas)
 - 🎥 [Riveo Page Curl - “Can it be done in React Native?”](https://www.youtube.com/watch?v=xNZCQvtnhIU)
+- 📦 [Expo Router 1.2](https://twitter.com/Baconbrix/status/1630969201421582341)
 - 📦 [React-Native-Replicache](https://github.com/Braden1996/react-native-replicache/)
+- 📦 [VisionCamera Realtime Object Detection with TensorFlow Lite](https://github.com/jaroslawkrol/vision-camera-realtime-object-detection) - [demo](https://twitter.com/mrousavy/status/1631269105796886528)
 
 ## 🧑‍💻 Jobs {#jobs}
 
@@ -168,6 +175,7 @@ Teale recrute un dev mobile React-Native / TypeScript pour travailler sur une ap
 - [Tether elements to each other with CSS anchor positioning](https://developer.chrome.com/blog/tether-elements-to-each-other-with-css-anchor-positioning/)
 - [Can WebAssembly Solve Serverless’s Problems?](https://thenewstack.io/can-webassembly-solve-serverless-problems/)
 - [Experiments with the JavaScript Garbage Collector](https://dev.to/codux/experiments-with-the-javascript-garbage-collector-2ae3)
+- [Drizzle ORM - TypeScript ORM for SQL](https://github.com/drizzle-team/drizzle-orm)
 
 ---
 
